# AnimatedWebP

./: CMakeLists.txt  README.md  webp_generator.hpp
